implemented and fixed the bug on Product/package list (order by price, date, alphebetically, and filtering by price)

--- a/requirements.txt
+++ b/requirements.txt
@@ -7,7 +7,6 @@ typing_extensions==4.8.0
 tzdata==2023.3
 Pillow==10.1.0
 Markdown==3.5.1
-psycopg2==2.9.9
 cryptography==41.0.4
 django-environ==0.11.2
 django-decouple==2.1
@@ -15,3 +14,5 @@ Markdown==3.5.1
 django-case-insensitive-field==1.0.7
 whitenoise==6.6.0
 gunicorn==21.2.0
+psycopg2-binary==2.9.9
+dj-database-url==2.1.0
